--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #------------------------------------------------------------
 
 # Which carpentry is this ("swc", "dc", or "lc")?
-carpentry: "swc"
+carpentry: "dc"
 
 # Overall title for pages.
-title: "Workshop Title"
+title: "Python masterclass, AMOS-ICSHMO 2018"
 
 # Contact email address.
-email: lessons@software-carpentry.org
+email: irving.damien@gmail.com
 
 #------------------------------------------------------------
 # Generic settings (should not need to change).
